function-timer/tests/fail/fail_disable_struct.rs
use function_timer::time;

struct Test {}

#[time(disable)]
impl Test {
    fn test() {}
}
